@@ -48,3 +48,4 @@
 2014-10-29  42  Bookmark Extra Info adding, viewing, editing, etc all done.
 2014-11-06  47  Introduce business logic class, implemented Trashing bookmarks. Ported to Qt5.3.
 2014-11-09  48  FirefoxBookmarkJSONFileParser parses Firefox bookmarks json documents into own structs.
+2014-11-11  48  Introduce general importers and ImportedBookmarksPreviewDialog
